--- a/layouts/epub_page.html.ejs
+++ b/layouts/epub_page.html.ejs
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
 <title>Chapter 3. It’s Alive: Rich Content Accessibility</title>
-<link rel="stylesheet" type="text/css" href="css/epub.css" />
+<!-- link rel="stylesheet" type="text/css" href="css/epub.css" / -->
 </head>
 <body>
 <%- content %>
