Autogenerate table of contents - other improvements

--- a/layouts/epub_page.html.ejs
+++ b/layouts/epub_page.html.ejs
@@ -2,8 +2,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
-<title>Chapter 3. It’s Alive: Rich Content Accessibility</title>
-<!-- link rel="stylesheet" type="text/css" href="css/epub.css" / -->
+<title><%= title %></title>
+<%
+akashacms.plugin('akashacms-epub').getEPUBmetadata().manifest.forEach(function(item) {
+    // TODO Fix the item.href so it computes a correct relative path to the resource
+    if (item.type === "text/css") { %>
+    <link rel="stylesheet" type="<%= item.type %>" href="<%= item.href %>" /><%
+    }
+})
+%>
 </head>
 <body>
 <%- content %>
