Fix TOC generation to automatically look up the document title

--- a/partials/toc-epub3-item.html.ejs
+++ b/partials/toc-epub3-item.html.ejs
@@ -1,6 +1,9 @@
-<li><a href="<%= item.href %>"><%= item.title %></a><%
+<%
+// console.log(item);
+if (item.hasOwnProperty("spineorder")) { %>
+<li><a href="<%= item.href %>"><%= akashacms.plugin('akashacms-epub').titleForManifestItem(item) %></a><%
 // console.log(subtoc);
 if (subtoc) {
     %><%- partial("toc-epub3-toc.html.ejs", { toc: subtoc }) %><%
 }
-%></li>
+%></li><% } %>
