--- a/partials/toc-epub3-item.html.ejs
+++ b/partials/toc-epub3-item.html.ejs
@@ -1,9 +1,10 @@
 <%
 // console.log(item);
-if (item.hasOwnProperty("spineorder")) { %>
-<li><a href="<%= item.href %>"><%= akashacms.plugin('akashacms-epub').titleForManifestItem(item) %></a><%
-// console.log(subtoc);
-if (subtoc) {
-    %><%- partial("toc-epub3-toc.html.ejs", { toc: subtoc }) %><%
+%><li><a href="<%= item.href %>"><%= item.title %></a><%
+// console.log(subchapters);
+if (subchapters) {
+    %>
+    <%- partial("toc-epub3-toc.html.ejs", { chapters: subchapters }) %>
+    <%
 }
-%></li><% } %>
+%></li>
