Use supplied ID for the figure tag

--- a/partials/cover.html.ejs
+++ b/partials/cover.html.ejs
@@ -9,7 +9,7 @@
 		</style>
 	</head>
 	<body>
-		<figure id="cover-image">
+		<figure id="<%= idImage %>">
 			<img src="<%= src %>" alt="<%= alt %>" />
 		</figure>
 	</body>
