Specify numbering style and starting value for Table of Contents

--- a/partials/toc-epub3-toc.html.ejs
+++ b/partials/toc-epub3-toc.html.ejs
@@ -1,4 +1,9 @@
-<ol>
+<ol <%
+
+    if (typeof type !== 'undefined') { %> type="<%= type %>" <% }
+    if (typeof start !== 'undefined') { %> start="<%= start %>" <% }
+
+%> >
 <%
 chapters.forEach(function(chapterItem) {
 %>
