Nearly complete rewrite - hugely simplified configuration for books

--- a/layouts/epub_page.html.ejs
+++ b/layouts/epub_page.html.ejs
@@ -1,11 +1,33 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<%
+/**
+ * AkashaEPUB - akashacms-epub
+ * 
+ * Copyright 2015 David Herron
+ * 
+ * This file is part of AkashaCMS-epub (http://akashacms.com/).
+ *
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ */
+%><?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
 <title><%= title %></title>
 <ak-stylesheets></ak-stylesheets>
+<ak-headerJavaScript></ak-headerJavaScript>
 </head>
 <body>
 <%- content %>
+<ak-footerJavaScript></ak-footerJavaScript>
 </body>
 </html>
