--- a/partials/toc.ncx.ejs
+++ b/partials/toc.ncx.ejs
@@ -1,4 +1,24 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<%
+/**
+ * AkashaEPUB - akashacms-epub
+ * 
+ * Copyright 2015 David Herron
+ * 
+ * This file is part of AkashaCMS-epub (http://akashacms.com/).
+ *
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ */
+%><?xml version="1.0" encoding="UTF-8"?>
 <ncx version="2005-1" xml:lang="en" xmlns="http://www.daisy.org/z3986/2005/ncx/">
  
   <head>
@@ -8,7 +28,7 @@ including those conforming to the relaxed constraints of OPS 2.0 -->
     <%
     // Support ability to give a different identifier for NCX
     var uniqueID = undefined;
-    metadata.identifiers.forEach(function(identifier) {
+    identifiers.forEach(function(identifier) {
         if (typeof identifier.unique !== 'undefined' && identifier.unique !== null) uniqueID = identifier;
     });
     if (!uniqueID) throw new Error("No Identifier");
@@ -24,11 +44,11 @@ including those conforming to the relaxed constraints of OPS 2.0 -->
   </head>
  
   <docTitle>
-    <text><%= metadata.title %></text>
+    <text><%= title %></text>
   </docTitle>
  
   <docAuthor>
-    <text><%= metadata.creators[0].nameReversed %></text>
+    <text><%= creators[0].nameReversed %></text>
   </docAuthor>
 
 <navMap>
