--- a/partials/toc-epub3.html.ejs
+++ b/partials/toc-epub3.html.ejs
@@ -1,9 +1,24 @@
----
-layout: <%= pageLayout %>
-title: <%= title %>
----
-
-<nav epub:type="<%= navtype %>" id="<%= id %>">
+<%
+/**
+ * AkashaEPUB - akashacms-epub
+ * 
+ * Copyright 2015 David Herron
+ * 
+ * This file is part of AkashaCMS-epub (http://akashacms.com/).
+ *
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *  Unless required by applicable law or agreed to in writing, software
+ *  distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and
+ *  limitations under the License.
+ */
+%><nav epub:type="<%= navtype %>" id="<%= id %>">
 <h1><%= title %></h1>
 <% if (subTitle) { %><h2><%= subTitle %></h2><% } %>
 <%- partial("toc-epub3-toc.html.ejs", {
